Change way to photo
перед слэш поставил точки

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="WebStudio"></a>
-        <img src="/imeges/WebStudio.png" alt="WebStudio">
+        <img src="./imeges/WebStudio.png" alt="WebStudio">
         <nav>
             <ul>
                 <li>Студія</li>
@@ -38,29 +38,29 @@
          </section>
         <section>
             <h2>Чим ми займаємося</h2>
-            <img src="/imeges/box1.jpg" width="100" height="100" alt="клавіатура">
-            <img src="/imeges/box2.jpg" width="100" height="100" alt="монітор">
-            <img src="/imeges/box3.jpg" width="100" height="100" alt="планшет">
+            <img src="./imeges/box1.jpg" width="100" height="100" alt="клавіатура">
+            <img src="./imeges/box2.jpg" width="100" height="100" alt="монітор">
+            <img src="./imeges/box3.jpg" width="100" height="100" alt="планшет">
         </section>
         <section>
             <h2>Наша команда</h2>
             <figure> 
-                <img src="/imeges/igor.jpg" width="100" height="100" alt="фото Ігоря">
+                <img src="./imeges/igor.jpg" width="100" height="100" alt="фото Ігоря">
                 <figcaption>Ігор Дем'яненко</figcaption>
             </figure> 
             <p>Product Designer</p>
             <figure>
-                <img src="/imeges/olga.jpg" width="100" height="100" alt="фото Ольги">
+                <img src="./imeges/olga.jpg" width="100" height="100" alt="фото Ольги">
                 <figcaption>Ольга Рєпіна</figcaption>
             </figure>
              <p>Frontend Developer</p>
             <figure>
-                <img src="/imeges/mykola.jpg" width="100" height="100" alt="фото Миколи">
+                <img src="./imeges/mykola.jpg" width="100" height="100" alt="фото Миколи">
                 <figcaption>Микола Тарасов</figcaption>
             </figure>
             <p>Marketing</p>
             <figure>
-                <img src="/imeges/myhailo.jpg" width="100" height="100" alt="фото Михайла">
+                <img src="./imeges/myhailo.jpg" width="100" height="100" alt="фото Михайла">
                 <figcaption>Михайло Єрмаков</figcaption>
             </figure>
              <p>UI Designer</p>
@@ -68,7 +68,7 @@
     </main>
     <footer>
         <a href="WebStudio"></a>
-        <img src="/imeges/WebStudio.png" alt="WebStudio">
+        <img src="./imeges/WebStudio.png" alt="WebStudio">
         <address>
             <ul>
                 <li>м. Київ, пр-т Лесі Українки, 26</li>
